# agentic-auto-bidding

./: .gitignore  README.md  build_state_dicts.py  pyproject.toml  run.sh
aab_auctionnet/: __init__.py  pyproject.toml
aab_auctionnet/env/: __init__.py  auctionnet_env.py
aab_auctionnet/strategy/: __init__.py  base_strategy.py  dt_strategy.py  llm_strategy.py
aab_core/: __init__.py  pyproject.toml
aab_core/env/: __init__.py
aab_core/model/: __init__.py  base_model.py  dt_model.py  llm_model.py
aab_core/strategy/: __init__.py  base_strategy.py
agb_auctionnet/: __init__.py  pyproject.toml
agb_auctionnet/data/: __init__.py  dataset.py
agb_auctionnet/env/: __init__.py  auctionnet_env.py
agb_auctionnet/infer/: evaluate.py
agb_auctionnet/model/: __init__.py  think_model.py
agb_auctionnet/strategy/: __init__.py  agent_strategy.py  base_strategy.py  dt_strategy.py  llm_strategy.py
agb_core/: __init__.py  pyproject.toml
agb_core/data/: dataset.py  trajectory.py
agb_core/env/: __init__.py  offline_env.py
agb_core/infer/: __init__.py  llm_backend.py
agb_core/model/: __init__.py  act_model.py  act_model_v2.py  agent_model.py  auction_net_llm_model.py  base_model.py  dt_model.py  llm_model.py  think_model.py
agb_core/strategy/: __init__.py  base_strategy.py
agb_core/utils/: argparse.py  llm_backend.py  lora.py  path.py
config/: agent_auctionnet.yaml  dt_auctionnet.yaml
run/: run_act.py  run_agent.py  run_batch_think.py  run_dt.py  run_llm.py  run_think.py  train_act.py  train_act_v2.py  train_agent.py  train_think.py
