[project]
name = "agb-dev"
version = "0.1.0"
description = "Agentic Auto-Bidding Development Framework"
readme = "README.md"
requires-python = ">=3.10"

[tool.uv.workspace]
members = [
    "agb_core",
    "agb_auctionnet",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["Q"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"
avoid-escape = true