[project]
name = "aab-auctionnet"
version = "0.1.0"
description = "AuctionNet dataset implementation for aab-core"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aab-core",
    "pydantic>=2.0",
    "numpy>=1.24",
    "onnxruntime>=1.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
