[project]
name = "agb-auctionnet"
version = "0.1.0"
description = "AuctionNet dataset implementation for agb-core"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "agb-core",
    "pydantic>=2.0",
    "numpy>=1.24",
    "onnxruntime>=1.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
